@@ -258,8 +258,8 @@ void SlabImpl::calc_overlap_matrices
     sin_I (i) = global_slab.beta / kz0_I;
     sin_II(i) = global_slab.beta / kz0_II; 
 
-    cos_I (i) = sqrt(1.0 - sin_I (i) * sin_I (i)); // TODO: check sign
-    cos_II(i) = sqrt(1.0 - sin_II(i) * sin_II(i));    
+    cos_I (i) = signedsqrt(1.0 - sin_I (i) * sin_I (i));
+    cos_II(i) = signedsqrt(1.0 - sin_II(i) * sin_II(i));
   }
 
   // Calculate O_I_II and O_II_I.
@@ -269,22 +269,22 @@ void SlabImpl::calc_overlap_matrices
     {
       (*O_I_II)(i,    j) =   TE_TE_I_II(i,j) * cos_I (  i);
       (*O_I_II)(i,  n+j) =   0.0;
-      (*O_I_II)(n+i,  j) = - Ex_Hz_I_II(i,j) * sin_II(  j)
-                           + Ez_Hx_I_II(i,j) * sin_I (n+i);      
+      (*O_I_II)(n+i,  j) = + Ex_Hz_I_II(i,j) * sin_II(  j)
+                           - Ez_Hx_I_II(i,j) * sin_I (n+i);   
       (*O_I_II)(n+i,n+j) =   TM_TM_I_II(i,j) * cos_II(n+j);
 
       (*O_II_I)(i,    j) =   TE_TE_II_I(i,j) * cos_II(  i);
       (*O_II_I)(i,  n+j) =   0.0;
-      (*O_II_I)(n+i,  j) = - Ex_Hz_II_I(i,j) * sin_I (  j)
-                           + Ez_Hx_II_I(i,j) * sin_II(n+i);
-      (*O_II_I)(n+i,n+j) =   TM_TM_II_I(i,j) * cos_I (n+j);    
+      (*O_II_I)(n+i,  j) = + Ex_Hz_II_I(i,j) * sin_I (  j)
+                           - Ez_Hx_II_I(i,j) * sin_II(n+i);
+      (*O_II_I)(n+i,n+j) =   TM_TM_II_I(i,j) * cos_I (n+j);  
     }
 
   for (int i=1; i<=N; i++)
     for (int j=1; j<=N; j++)
     {
-      (*O_I_II)(i,j) /= sqrt(cos_I (i) * cos_II(j));
-      (*O_II_I)(i,j) /= sqrt(cos_II(i) * cos_I (j));
+      (*O_I_II)(i,j) /= sqrt(cos_I (i)) * sqrt(cos_II(j));
+      (*O_II_I)(i,j) /= sqrt(cos_II(i)) * sqrt(cos_I (j));
     }
 
   // Calculate O_I_I and O_II_II.
@@ -292,18 +292,18 @@ void SlabImpl::calc_overlap_matrices
   *O_I_I = 0.0; *O_II_II = 0.0;
   
   for (int i=1; i<=N; i++)
-    (*O_I_I)(i,i) = (*O_II_II)(i,i) = 1.0;
+    (*O_I_I)(i,i) = (*O_II_II)(i,i) = 1.0;  
 
   for (int i=1; i<=n; i++)
     for (int j=1; j<=n; j++)
     {
-      (*O_I_I)(n+i,j) =   (- Ex_Hz_I_I(i,j) * sin_I(  j)
-                           + Ez_Hx_I_I(i,j) * sin_I(n+i)) 
-                              / sqrt(cos_I(n+i) * cos_I(j));
+      (*O_I_I)(n+i,j)   = (+ Ex_Hz_I_I(i,j) * sin_I(  j)
+                           - Ez_Hx_I_I(i,j) * sin_I(n+i)) 
+                              / sqrt(cos_I(n+i)) / sqrt(cos_I(j));
 
-      (*O_II_II)(n+i,j) = (- Ex_Hz_II_II(i,j) * sin_II(  j)
-                           + Ez_Hx_II_II(i,j) * sin_II(n+i))
-                              / sqrt(cos_II(n+i) * cos_II(j));
+      (*O_II_II)(n+i,j) = (+ Ex_Hz_II_II(i,j) * sin_II(  j)
+                           - Ez_Hx_II_II(i,j) * sin_II(n+i))
+                              / sqrt(cos_II(n+i)) / sqrt(cos_II(j));
     }
 }
 
