@@ -1,3 +1,7 @@
+2001-11-27  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* generalslab.cpp: Fix signs and normalisation.
+
 2001-11-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* generalslab.cpp: Account for non-orthogonal modes.
